# webcode-session-keeper

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: bridge.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  tab_commands.rs
