[package]
name = "webcode-session-keeper"
version = "0.1.0"
edition = "2021"

[lib]
name = "webcode_session_keeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
dirs = "5"
url = "2"
